watchman-gateway/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: watchman-ingress
  namespace: moov
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: my-watchman
          servicePort: http
        path: /*
